# osm-cpp-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
example/config/: c_cpp_properties.json
src/: main.cpp
src/collectors/default_collector/: default_collector.cpp  default_collector.hpp
src/defs/: collect_phase.hpp  osm_object_type.hpp  osmium.hpp
src/model/: RelaltionBoundary.hpp  RelationBoundaryMember.hpp
src/relations/boundary/: RelationBoundaryHandler.cpp  RelationBoundaryHandler.hpp
src/test/: test_boundary_handler.cpp
